[gd_scene load_steps=7 format=3 uid="uid://b6mtbdfst3gre"]

[ext_resource type="Script" path="res://world1/world1.gd" id="1_2qmpu"]
[ext_resource type="PackedScene" uid="uid://wookxmhuppa" path="res://some_floor/static_body_2d.tscn" id="1_34wpd"]
[ext_resource type="PackedScene" uid="uid://dwsqxkofv2px" path="res://flying-floors/left-flying/left-flaying-floor.tscn" id="2_ijxim"]
[ext_resource type="PackedScene" uid="uid://g0yuqwlslk3j" path="res://player/plaayer.tscn" id="2_ytat7"]
[ext_resource type="PackedScene" uid="uid://bsxqv2e1e7628" path="res://right-flaying-floor.tscn" id="3_vhw4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feyyd"]
size = Vector2(37, 507)

[node name="world1" type="Node2D"]
script = ExtResource("1_2qmpu")
packedBLockLeft = ExtResource("2_ijxim")
packedBlockRight = ExtResource("3_vhw4h")

[node name="StaticBody2D" parent="." instance=ExtResource("1_34wpd")]
position = Vector2(444, 447)

[node name="StaticBody2D2" parent="." instance=ExtResource("1_34wpd")]
position = Vector2(570, 447)

[node name="StaticBody2D3" parent="." instance=ExtResource("1_34wpd")]
position = Vector2(696, 447)

[node name="plaayer" parent="." instance=ExtResource("2_ytat7")]
position = Vector2(561, 279)

[node name="left-down-Marker" type="Marker2D" parent="."]
position = Vector2(163, 347)

[node name="left-upper-Marker" type="Marker2D" parent="."]
position = Vector2(163, 75)

[node name="right-upper-Marker" type="Marker2D" parent="."]
position = Vector2(860, 75)

[node name="right-down-Marker" type="Marker2D" parent="."]
position = Vector2(860, 347)

[node name="wall1" type="Area2D" parent="."]
position = Vector2(51, 275)

[node name="CollisionShapeWall1" type="CollisionShape2D" parent="wall1"]
position = Vector2(15, -17)
shape = SubResource("RectangleShape2D_feyyd")

[node name="wall2" type="Area2D" parent="."]
position = Vector2(930, 275)

[node name="CollisionShapeWall2" type="CollisionShape2D" parent="wall2"]
position = Vector2(15, -17)
shape = SubResource("RectangleShape2D_feyyd")
